--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.daemon=false
 	loader_version=0.17.2
 
 # Mod Properties
-	mod_version=1.0.0
+	mod_version=1.1.0-dev
 	maven_group=in.rubyra
 	archives_base_name=seals
 
